# mapper-tda-haskell-api

./: CHANGELOG.md  README.md  haskell-mapper.cabal  mapper-tda-haskell-api.cabal
app/: BallTree.hs  Main.hs
app/WebService/: MapperAPI.hs  ScottyWS.hs  ServantWS.hs
src/: BallTree.hs  Cover.hs  Domain.hs  MapperAPI.hs  Utils.hs
src/BallTree/: Common.hs  Internal.hs  Multiple.hs  Search.hs
src/BallTree/CircleTree/: Common.hs  ContainerLeaf.hs  SingletonLeaf.hs
src/BallTree/DoubleCircleTree/: Common.hs  ContainerLeaf.hs  SingletonLeaf.hs
src/Data/: BallTree.hs  CircleTree.hs  CircleTreeOld.hs  Common.hs  QuickSelect.hs
src/Data/BallTree/: CircleTree.hs
src/Data/BallTree/CircleTree/: IntTree.hs
src/Data/CircleTree/: Common.hs  ContainerLeaf.hs  IntTree.hs  IntTreeLazy.hs  IntTreeNew.hs  SingletonLeaf.hs  WrappedTree.hs
src/Mapper/: Cover.hs  Domain.hs
src/WebService/: MapperAPI.hs  ScottyWS.hs  ServantWS.hs
test/: TestSuite.hs  UtilsTest.hs  UtilsTestSuite.hs
test/BallTree/: CommonTest.hs  InternalTestSuite.hs
test/BallTree/CircleTree/: SingletonLeafTest.hs
test/Data/: CircleTreeTest.hs  QuickSelectTest.hs
test/Data/BallTree/: CircleTreeTest.hs
test/Data/BallTree/CircleTree/: SingletonLeafTest.hs
