cabal-version:      2.4
name:               haskell-mapper
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Luca Simi
maintainer:         lucasimi90@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable haskell-mapper
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, 
                      containers,
                      vector,
                      haskell-mapper-library
    hs-source-dirs:   app
    default-language: Haskell2010

library haskell-mapper-library
    build-depends:    base ^>=4.14.3.0, 
                      containers,
                      vector,
                      text,
                      servant,
                      servant-server,
                      aeson,
                      wai,
                      warp
    hs-source-dirs:   src, 
                      src/BallTree
    default-language: Haskell2010
    exposed-modules:  Domain,
                      Cover,
                      MapperAPI,
                      BallTree,
                      BallTree.Common,
                      BallTree.CircleTree.Common,
                      BallTree.CircleTree.SingletonLeaf,
                      BallTree.CircleTree.ContainerLeaf,
                      BallTree.Search,
                      Utils

test-suite haskell-mapper-test
    type:             exitcode-stdio-1.0
    main-is:          TestSuite.hs
    hs-source-dirs:   test
    build-depends:    base ^>=4.14.3.0, 
                      containers,
                      vector,
                      QuickCheck,
                      quickcheck-instances,
                      haskell-mapper-library
    default-language: Haskell2010
    other-modules:    BallTree.CircleTree.SingletonLeafTest,
                      BallTree.CommonTest
