cabal-version:      2.4
name:               haskell-mapper
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Luca Simi
maintainer:         lucasimi90@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable haskell-mapper
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    WebService.ServantWS,
                      WebService.ScottyWS,
                      WebService.MapperAPI

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, 
                      containers,
                      vector,
                      haskell-mapper-library,
                      servant,
                      servant-server,
                      aeson,
                      wai,
                      wai-logger,
                      warp,
                      scotty,
                      text,
                      time
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -O2
                      -Wall
                      -threaded
                      -fllvm
                      -fprof-auto

library haskell-mapper-library
    build-depends:    base ^>=4.14.3.0, 
                      containers,
                      hashable,
                      unordered-containers,
                      vector,
                      parallel,
                      primitive,
    hs-source-dirs:   src
    default-language: Haskell2010
    exposed-modules:  Mapper.Domain,
                      Mapper.Cover,
                      Data.BallTree,
                      Data.Common,
                      Data.QuickSelect,
                      Data.CircleTree.IntTree,
                      Data.CircleTree.IntTreeNew,
                      Data.CircleTree.IntTreeLazy,
                      Data.CircleTree.ContainerLeaf,
                      Data.CircleTree.SingletonLeaf,
                      Data.CircleTree.Common
    ghc-options:      -Wall
                      -O2
                      -threaded
                      -fllvm
                      -fprof-auto

test-suite haskell-mapper-test
    type:             exitcode-stdio-1.0
    main-is:          TestSuite.hs
    hs-source-dirs:   test
    build-depends:    base ^>=4.14.3.0, 
                      containers,
                      unordered-containers,
                      hashable,
                      vector,
                      QuickCheck,
                      quickcheck-instances,
                      haskell-mapper-library
    default-language: Haskell2010
    other-modules:    Data.BallTree.CircleTree.SingletonLeafTest,
                      Data.QuickSelectTest
