cabal-version:      2.4
name:               mapper-tda-haskell-api
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: An API for the Mapper Algorithm

-- A longer description of the package.
description: This package provides a library and an executable exposing an API for computing the Mapper Algorithm from TDA

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Luca Simi
maintainer:         lucasimi90@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable mapper-tda-haskell-api
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    WebService.ServantWS,
                      WebService.ScottyWS,
                      WebService.MapperAPI

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, 
                      containers,
                      vector,
                      mapper-tda,
                      servant,
                      servant-server,
                      aeson,
                      wai,
                      wai-logger,
                      warp,
                      scotty,
                      text,
                      time
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -O2
                      -Wall
                      -threaded
                      -fllvm
                      -fprof-auto

library mapper-tda
    build-depends:    base ^>=4.14.3.0, 
                      containers,
                      hashable,
                      unordered-containers,
                      vector,
                      parallel,
                      primitive,
    hs-source-dirs:   src
    default-language: Haskell2010
    exposed-modules:  Mapper.Domain,
                      Mapper.Cover,
                      Data.Common,
                      Data.QuickSelect,
                      Data.BallTree,
                      Data.BallTree.CircleTree,
                      Data.BallTree.CircleTree.IntTree
    ghc-options:      -Wall
                      -O2
                      -fllvm
                      -fprof-auto

test-suite mapper-tda-haskell-test
    type:             exitcode-stdio-1.0
    main-is:          TestSuite.hs
    hs-source-dirs:   test
    build-depends:    base ^>=4.14.3.0, 
                      containers,
                      unordered-containers,
                      hashable,
                      vector,
                      QuickCheck,
                      quickcheck-instances,
                      mapper-tda
    default-language: Haskell2010
    other-modules:    Data.BallTree.CircleTreeTest,
                      Data.QuickSelectTest
